# Dendrite

./: .env.example  .gitignore  .gitmodules  CLAUDE.md  README.md  docker-compose.yml
orchestrator/: Dockerfile  pyproject.toml
orchestrator/frontend/: index.html  package-lock.json  package.json  vite.config.ts
orchestrator/frontend/src/: App.tsx
orchestrator/frontend/src/components/: BranchDetail.tsx  ClaimCard.tsx  ProgressFeed.tsx  TreeView.tsx
orchestrator/frontend/src/pages/: HistoryPage.tsx  ResearchPage.tsx  SettingsPage.tsx
orchestrator/src/: cache.py  config.py  convergence.py  engine.py  main.py  models.py  semantic_dedup.py  source_quality.py  validation.py
orchestrator/src/llm/: batch.py  client.py  prompts.py
orchestrator/src/mcp/: server.py
orchestrator/src/providers/: __init__.py  academic.py  base.py  web.py
orchestrator/src/storage/: hivemind.py  models.py  trees.py
scripts/: screenshots.mjs  seed_demo_tree.py
searxng/: settings.yml
vllm/: Dockerfile
