[build-system]
requires = ["hatchling"]
build-backend = "hatchling.backends"

[project]
name = "dendrite"
version = "0.1.0"
description = "Recursive branching truth engine"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "httpx>=0.27",
    "pydantic>=2.9",
    "pydantic-settings>=2.5",
    "trafilatura>=1.12",
    "mcp>=1.0",
    "websockets>=13",
]
